===== ** 1.0.5 ** =====
  * Re-implement and rename the addon for Heroic Sha of Fear

===== ** 1.0.4 ** =====
  * Update the toc version for 7.0

-----

===== ** 1.0.3 ** =====
  __Eye of Anzu Assist module__:
  * Fixed the tabulation (displayed as ?) in the frame strata description in the options.

-----

===== ** 1.0.2.1 ** =====
  * Eye of Anzu module is now enabled by default.

-----

===== ** 1.0.2 ** =====
  * Tagged as release.
  * The no-lib version is now available.
  * The addon is now modular, Epsi Iskar Assist is considered as core module and handles the loading of other modules. \\
  The old features of Epsi Iskar Assist and its options have been moved  in the module "Eye of Anzu Assist" .
  * The addon now uses LibAboutPanel to show its informations (version, stage, author, website, licence, ...)
  * Fixed an issue where the addon  updates incorrectly the player list.

  __Eye of Anzu Assist module__:
    * Fixed an issue where the eye of Anzu cannot be sent to a player who had changed his name with toys.
    * Fixed an issue where the auto-enable feature doesn't work when you target or mouseover Iskar whike you are in combat. \\
    **NOTE**: The addon cannot be enabled and loaded in combat (Blizzard restriction), its loading will be delayed till you are out of combat.
    * ++ Implemented the scale feature. ++
    * ++ Added a range indicator by alpha. ++
    * The options have been updated :
      ** The "Enable" option has been moved in the options of Epsi Iskar Assist
      ** ++ Added a "Show on Iskar" option (enabled by default) in order to know if the raid frame must be automaticaly displayed when the player has Iskar on target or mouseover.++\\
        NOTE: This feature already existed in the old versions but not added in the options to know if the player wants this behavior or not. This now things done.
      ** ++ The "Show" option no longer exists. This is replaced by an execute button that shows or hides the raid frames.++